# rust_csv_validator

./: .env.example  .gitignore  Cargo.toml  LEARNING.md  README.md  logs.csv
.github/workflows/: csv_validation.yml
config/: adls_logs_config.yaml  example_config.yaml  logs_config.yaml
src/: cli.rs  config.rs  error.rs  lib.rs  main.rs  reporter.rs  rules.rs  storage.rs  validator.rs
tests/: integration_tests.rs
tests/fixtures/: invalid_orders.csv  test_config.yaml  valid_orders.csv
